# second_brain

./: .gitignore  CLAUDE.md  CONTEXT.md  LICENSE  Makefile  README.md  pyproject.toml
.obsidian/: app.json  graph.json
docs/: mcp-integration.md
raw/: README.md
tests/: test_common_frontmatter.py  test_common_slugs.py  test_common_wikilinks.py  test_fetch_images_cli.py  test_fetch_images_download.py  test_fetch_images_extract.py  test_fetch_images_rewrite.py  test_ingest_cli.py  test_ingest_diff.py  test_lint_checks_errors.py  test_lint_checks_warnings.py  test_lint_cli.py  test_lint_loader.py  test_lint_schema.py  test_mcp_server.py  test_mcp_server_subprocess.py  test_okf_cli.py  test_okf_export.py  test_render_cli.py  test_render_marp.py  test_render_schema.py  test_render_validate.py  test_search_cli.py  test_search_index.py  test_search_query.py  test_search_tokenize.py  test_zones.py
tools/: mcp_server.py
tools/_common/: frontmatter.py  report.py  slugs.py  wikilinks.py  zones.py
tools/fetch_images/: README.md  __main__.py  cli.py  download.py  extract.py  rewrite.py
tools/ingest/: __init__.py  __main__.py  cli.py  diff.py
tools/lint/: README.md  __init__.py  __main__.py  checks.py  cli.py  loader.py  report.py  schema.py
tools/okf/: README.md  __init__.py  __main__.py  cli.py  export.py
tools/render/: __main__.py  cli.py  marp.py  schema.py  validate.py
tools/search/: README.md  __init__.py  __main__.py  cli.py  index.py  query.py  server.py  tokenize.py
wiki/: README.md
wiki/indexes/: by-date.md  by-topic.md  orphans.md
(+18 files in other folders)
